add psr-4 autoload to composer.json

--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,15 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "PhpProfiler\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "PhpProfiler\\": "tests"
+    }
   }
 }
