--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.0"
+    "phpunit/phpunit": "^9.0",
+    "vimeo/psalm": "^3.11"
   },
   "autoload": {
     "psr-4": {
