--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^9.0",
-    "vimeo/psalm": "^3.11"
+    "vimeo/psalm": "^3.11",
+    "squizlabs/php_codesniffer": "*"
   },
   "autoload": {
     "psr-4": {
