--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
   "require-dev": {
     "phpunit/phpunit": "^9.0",
     "vimeo/psalm": "^3.11",
-    "squizlabs/php_codesniffer": "*"
+    "squizlabs/php_codesniffer": "*",
+    "mockery/mockery": "^1.3"
   },
   "autoload": {
     "psr-4": {
