--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "phpunit/phpunit": "^9.0",
     "vimeo/psalm": "^3.11",
     "squizlabs/php_codesniffer": "*",
-    "mockery/mockery": "^1.3"
+    "mockery/mockery": "^1.3",
+    "psalm/plugin-mockery": "^0.3.0"
   },
   "autoload": {
     "psr-4": {
