fix test to kill child process

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     }
   },
   "require-dev": {
+    "ext-posix": "*",
     "phpunit/phpunit": "^9.0",
     "vimeo/psalm": "^3.11",
     "squizlabs/php_codesniffer": "*",
