--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "vimeo/psalm": "^3.11",
     "squizlabs/php_codesniffer": "*",
     "mockery/mockery": "^1.3",
-    "psalm/plugin-mockery": "^0.3.0"
+    "psalm/plugin-mockery": "^0.3.0",
+    "jetbrains/phpstorm-stubs": "dev-master#4522dea41207396f9ed19ce60b306a5ef8e453b7"
   },
   "autoload": {
     "psr-4": {
