change output format for psalm on github actions

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -36,4 +36,4 @@ jobs:
       run: composer run-script phpcs
 
     - name: Run psalm
-      run: ./vendor/bin/psalm --shepherd
+      run: ./vendor/bin/psalm --shepherd --output-format=github
