--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,7 +30,13 @@ jobs:
       run: composer install --dev --prefer-dist --no-progress --no-suggest
 
     - name: Run test suite
-      run: composer run-script test
+      run: ./vendor/bin/phpunit --coverage-html build/phpunit/coverage-html
+
+    - name: Send to coveralls
+      run: ./vendor/bin/php-coveralls -v
+      env:
+        COVERALLS_RUN_LOCALLY: 1
+        COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
     - name: Run phpcs
       run: composer run-script phpcs
