--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,7 +30,9 @@ jobs:
       run: composer install --dev --prefer-dist --no-progress --no-suggest
 
     - name: Run test suite
-      run: ./vendor/bin/phpunit --coverage-html build/phpunit/coverage-html
+      run: |
+        mkdir -p build/logs
+        ./vendor/bin/phpunit --coverage-html build/logs/coverage-html --coverage-clover build/logs/clover.xml
 
     - name: Send to coveralls
       run: ./vendor/bin/php-coveralls -v
