--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "php": "^7.4",
     "ext-ffi": "*",
     "ext-pcntl": "*",
-    "symfony/console": "^5.0"
+    "symfony/console": "^5.0",
+    "php-di/php-di": "^6.1"
   },
   "require-dev": {
     "ext-posix": "*",
