--- a/.github/workflows/phpcs.yml
+++ b/.github/workflows/phpcs.yml
@@ -20,6 +20,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: 7.4
+          extensions: dom
           coverage: none
           tools: cs2pr
 
