--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -20,7 +20,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: 7.4
-          extensions: ffi, dom
+          extensions: ffi, dom, mbstring
           coverage: pcov
 
       - name: Get Composer Cache Directory
