exclude logic-less files from coverage

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,6 +25,10 @@
             <directory suffix=".php">src</directory>
             <exclude>
                 <directory suffix=".php">src/Command/*/</directory>
+                <directory suffix="Interface.php">./src</directory>
+                <directory suffix="Message.php">./src</directory>
+                <directory suffix="SettingsException.php">./src</directory>
+                <directory suffix="LoopProvider.php">./src</directory>
             </exclude>
         </whitelist>
     </filter>
