--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -27,7 +27,7 @@
                 <directory suffix=".php">src/Command/*/</directory>
                 <directory suffix="Interface.php">./src</directory>
                 <directory suffix="Message.php">./src</directory>
-                <directory suffix="SettingsException.php">./src</directory>
+                <directory suffix="Exception.php">./src</directory>
                 <directory suffix="LoopProvider.php">./src</directory>
                 <directory suffix="context-entry.php">./src/Lib/Amphp</directory>
             </exclude>
