--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -52,7 +52,6 @@ jobs:
           ./vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
       - name: Send to coveralls
-        run: ./vendor/bin/php-coveralls -v
         env:
-          COVERALLS_RUN_LOCALLY: 1
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: ./vendor/bin/php-coveralls -v
