--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     "mockery/mockery": "^1.3",
     "psalm/plugin-mockery": "^0.3.0",
     "jetbrains/phpstorm-stubs": "dev-master",
-    "php-coveralls/php-coveralls": "^2.2"
+    "twinh/php-coveralls": "^2.3"
   },
   "autoload": {
     "psr-4": {
