add a configuration file and output templates
currently these files are ignored entirely!

--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,9 @@
   "require": {
     "php": "^7.4|^8.0",
     "ext-ffi": "*",
-    "ext-pcntl": "*",
     "ext-filter": "*",
+    "ext-json": "*",
+    "ext-pcntl": "*",
     "symfony/console": "^5.0",
     "php-di/php-di": "^6.1",
     "amphp/parallel": "^1.4",
