--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "symfony/console": "^5.0",
     "php-di/php-di": "^6.1",
     "amphp/parallel": "^1.4",
-    "amphp/amp": "^2.4"
+    "amphp/amp": "^2.4",
+    "hassankhan/config": "^2.1"
   },
   "require-dev": {
     "ext-posix": "*",
