--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "php": "^7.4",
+    "php": "^7.4|^8.0",
     "ext-ffi": "*",
     "ext-pcntl": "*",
     "ext-filter": "*",
@@ -29,12 +29,12 @@
   "require-dev": {
     "ext-posix": "*",
     "phpunit/phpunit": "^9.0",
-    "vimeo/psalm": "^3.11",
-    "squizlabs/php_codesniffer": "*",
+    "vimeo/psalm": "^4.7",
+    "squizlabs/php_codesniffer": "^3.6",
     "mockery/mockery": "^1.3",
     "psalm/plugin-mockery": "^0.3.0",
     "jetbrains/phpstorm-stubs": "dev-master",
-    "twinh/php-coveralls": "^2.3"
+    "php-coveralls/php-coveralls": "^2.3"
   },
   "autoload": {
     "psr-4": {
