--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "squizlabs/php_codesniffer": "^3.6",
     "mockery/mockery": "^1.3",
     "psalm/plugin-mockery": "^0.9.0",
-    "jetbrains/phpstorm-stubs": "dev-master",
+    "jetbrains/phpstorm-stubs": "2021.1",
     "php-coveralls/php-coveralls": "^2.3"
   },
   "autoload": {
