--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "php-di/php-di": "^6.1",
     "amphp/parallel": "^1.4",
     "amphp/amp": "^2.4",
-    "hassankhan/config": "^2.1"
+    "hassankhan/config": "^2.1",
+    "sj-i/php-cast": "^1.0"
   },
   "require-dev": {
     "ext-posix": "*",
