--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "amphp/amp": "2.6.1",
     "hassankhan/config": "2.2.0",
     "sj-i/php-cast": "1.0.0",
-    "monolog/monolog": "2.3.4"
+    "monolog/monolog": "2.3.4",
+    "myclabs/php-enum": "1.8.3"
   },
   "require-dev": {
     "ext-posix": "*",
