--- a/composer.json
+++ b/composer.json
@@ -65,5 +65,10 @@
     "phpcs": [
       "phpcs --standard=./phpcs.xml ./src ./tests"
     ]
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/package-versions-deprecated": true
+    }
   }
 }
