--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "hassankhan/config": "3.0.0",
     "sj-i/php-cast": "1.0.0",
     "monolog/monolog": "2.3.5",
-    "myclabs/php-enum": "1.8.3"
+    "myclabs/php-enum": "1.8.3",
+    "webmozart/assert": "1.10.0"
   },
   "require-dev": {
     "ext-posix": "*",
