--- a/.github/workflows/static-analysis.yml
+++ b/.github/workflows/static-analysis.yml
@@ -43,5 +43,8 @@ jobs:
       - name: Install Dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
+      - name: Install Bin Dependencies
+        run: composer bin all install --prefer-dist --no-progress --no-suggest
+
       - name: Run psalm
         run: ./vendor/bin/psalm --shepherd --show-info=true --output-format=github
