--- a/composer.json
+++ b/composer.json
@@ -34,12 +34,11 @@
   "require-dev": {
     "ext-posix": "*",
     "phpunit/phpunit": "10.1.3",
-    "vimeo/psalm": "5.11.0",
     "squizlabs/php_codesniffer": "3.7.2",
     "mockery/mockery": "1.5.1",
-    "psalm/plugin-mockery": "1.1.0",
     "jetbrains/phpstorm-stubs": "2022.3",
-    "php-coveralls/php-coveralls": "2.5.3"
+    "php-coveralls/php-coveralls": "2.5.3",
+    "bamarni/composer-bin-plugin": "^1.8"
   },
   "autoload": {
     "files": ["src/Lib/Defer/defer.php"],
@@ -68,7 +67,8 @@
   },
   "config": {
     "allow-plugins": {
-      "composer/package-versions-deprecated": true
+      "composer/package-versions-deprecated": true,
+      "bamarni/composer-bin-plugin": true
     }
   }
 }
